--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -143,9 +143,9 @@
         die mittlere Schneedichte durch Wägen von Schnee eines definierten Volumens – entweder
         in einem Schneeschacht oder durch Ziehen eines Schneekernes mit einem Kernbohrer Miteinander
         multipliziert ergeben Schneetiefe und -dichte die Akkumulation in Kilogramm pro Quadratmeter.
-        Um die Abschmelzung zu bestimmen, werden so genannte Ablationspegel mehrere Meter in das Eis gebohrt,
+        Um die Abschmelze zu bestimmen, werden so genannte Ablationspegel (linkes Bild) mehrere Meter in das Eis gebohrt,
         die nach kurzer Zeit festfrieren. Nach einem Jahr misst man, wie weit die Stangen
-        ausgeschmolzen sind, und berechnet die Höhen- bzw. die Massenänderung der Eisoberfläche.
+        ausgeschmolzen sind (rechtes Bild), und berechnet die Höhen- bzw. die Massenänderung der Eisoberfläche.
         Um nun die Massenbilanz eines gesamten Gebirgsgletschers zu bestimmen,
         werden die oberflächliche Akkumulation und Ablation an vielen Punkten gemessen und diese
         Punktwerte auf die gesamte Gletscherfläche interpoliert. Damit erhält man die
@@ -153,8 +153,22 @@
 
         <!--https://www.zamg.ac.at/cms/de/klima/informationsportal-klimawandel/standpunkt/klimaforschung/glaziologie/massenbilanz-gletscher-->
 
-        <img src="images/Ablationspegel.JPG" alt="Beispiel für einen Ablationspegel" alt="Beispiel für einen Ablationspegel"/>
-        <img src="images/Ablationspegel1.JPG" alt="Ausgeschmolzene Ablationspegel am Rieserferner" alt="Ausgeschmolzene Ablationspegel am Rieserferner" />
+       <figure> 
+         <figcaption class="gray">
+           linkes Bild: Beispiel für einen Albationspegel
+          <br> 
+          <br>
+           rechtes Bild: Ausgeschmolzenen Ablationspegel
+           <br>
+           <br>
+           (Fotos von Christian Gruber)
+        </figcaption>
+         <img src="images/Ablationspegel.JPG" alt="Beispiel für einen Ablationspegel" >
+         <img src="images/Ablationspegel1.JPG" alt="Ausgeschmolzene Ablationspegel am Rieserferner" alt="Ausgeschmolzene Ablationspegel am Rieserferner" /> 
+    
+        </figure> 
+
+
 
 
       <h3> Die akutelle Entwicklung </h3>
@@ -167,9 +181,9 @@
         den Messdaten des Vorjahres (-14,2 Meter) und weit über dem Mittel der letzten zehn Jahre (-16,5 Meter).
         "Seit den 1990er Jahren sind die Bedingungen für unsere Gletscher sehr ungünstig
         – das aktuelle Gletscherhaushaltsjahr fügt sich hier nahtlos ein",
-        erklären Gerhard Karl Lieb und Andreas Kellerer-Pirklbauer (Östereichischer Alpenverein). </p>
+        erklären Gerhard Karl Lieb und Andreas Kellerer-Pirklbauer
+      <a href= "http://www.alpenverein.at/portal/news/aktuelle_news/2018/2018_04_06_gletscherbericht.php ">(Östereichischer Alpenverein)</a>.</p>
 
-        <!--http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php -->
         <p>Weiter Infos und ältere Gletscherberichte unter: <a href= "http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php">Gletscherberichte des Österreichischen Alpenvereins</a> </p>
 
 
