Index_links_bilder

--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
         Gletscher. Daher wird innerhalb Klimaforschung, der Glaziologie immer größere Bedeutung beigemessen.
       </p>
       
-
+      <figure>
+          <figcaption class="gray">
+              Gletscher am Karlseisfeld, Dachstein (Quelle:
+              <a href= "http://www.gletscherarchiv.de/fotovergleiche/gletscher_liste_oesterreich/">Gletscherarchiv)</a>
+              </figcaption>
       <img src="images/dachstein.jpg" alt="Gletscher am Karlseisfeld, Dachstein" />
-      <p>Gletscher am Karlseisfeld, Dachstein (Quelle: http://www.gletscherarchiv.de) </p>
+     </figure>
      
       <!--<div id="map"></div>-->
 
@@ -67,9 +71,13 @@
         besonders im Fokus 
         <a href= "https://www.zamg.ac.at/cms/de/klima/informationsportal-klimawandel/klimaforschung/glaziologie">(ZAMG)</a>.</p>
       <!-- -->
-
+      <figure>
+          <figcaption class="gray">
+              Glaziologische Messungsarbeiten (Quelle:
+              <a href= "https://www.andreafischer.at/">Andrea_Fischer)</a>
+            </figcaption>
       <img src="images/glaziologie.jpg" alt="glaziologie" />
-      <p>Glaziologische Messungsarbeiten (Quelle: https://www.andreafischer.at/) </p>
+      </figure>
 
       <h3>Wechselwirkungen mit dem Klima rücken in den Mittelpunkt </h3>
 
@@ -120,7 +128,7 @@
       </ul>
 
       <div id="footer" class="gray">
-        <p>placeholder footer</p>
+     <p>Headerbild: Pitztaler Gletscher <a href="https://pixabay.com/de/berge-landschaft-natur-schnee-3187581/">(annca)</a></p>
       </div>
 
 
