--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </ul>
 
       <div id="footer" class="gray">
-     <p>Headerbild: Pitztaler Gletscher <a href="https://pixabay.com/de/berge-landschaft-natur-schnee-3187581/">(annca)</a></p>
+     <p>Headerbild: Pitztaler Gletscher <a href="https://pixabay.com/de/berge-landschaft-natur-schnee-3187581/">(Foto von annca)</a></p>
       </div>
 
 
