--- a/relationmap.html
+++ b/relationmap.html
@@ -59,15 +59,12 @@
     <h2><em><strong>Orthophoto Vergleichskarte Vergangenheit / Jetzt</strong></em></h2>
 
     <div id='map1'></div>
-
     <div id='map2'></div>
-
-    </div>
-
+    
+    
     <div id="footer" class="gray">
-
+      <p><br><br> <font color="white">You found it..;)</font></p>
       <p>Headerbild: Blick vom Hinteren Eis auf den Hintereisferner (Foto von Johannes Branke)</p>
     </div>
-
   </body>
 </html>
