--- a/relationmap_st.html
+++ b/relationmap_st.html
@@ -62,14 +62,9 @@
 
     <div id='map2'></div>
 
-    </div>
-
-
-    <p>Placeholder</p>
 
     <div id="footer" class="gray">
-      <p>placeholder footer</p>
-
+      <p><br><br> <font color="white">You found it..;)</font></p>
       <p>Headerbild: Blick vom Hinteren Eis auf den Hintereisferner (Foto von Johannes Branke)</p>
     </div>
 
