--- a/about_us.html
+++ b/about_us.html
@@ -38,28 +38,39 @@
     <div class="article">
       <h1>Das Kollektiv "Gspritzt"</h1>
 
-      <h2> Das Kollektiv </h2>
-
-      <p>
-        test
-      </p>
-      <!-- -->
+      <div class="prof_img">
+          <figure>
+            <img src="images/chgruber.png"/>
+          </figure>
+      </div>
 
 
       <h3>brankej</h3>
-
+      <div class="prof_img">
+          <figure>
+            <img src="images/brankej.png"/>
+          </figure>
+      </div>
       <p>
         test
       </p>
 
       <h3>chgruber</h3>
-
+      <div class="prof_img">
+          <figure>
+            <img src="images/chgruber.png"/>
+          </figure>
+      </div>
       <p>
         test
       </p>
 
       <h3>webmapping18ds</h3>
-
+      <div class="prof_img">
+          <figure>
+            <img src="images/webmappingds18.png"/>
+          </figure>
+      </div>
       <p>
         test
       </p>
