--- a/about_us.html
+++ b/about_us.html
@@ -40,7 +40,7 @@
 
       <div class="prof_img">
           <figure>
-            <img src="images/chgruber.png"/>
+            <img src="images/gspritzt.png"/>
           </figure>
       </div>
 
@@ -50,30 +50,34 @@
           <figure>
             <img src="images/brankej.png"/>
           </figure>
+          <p class="gray">
+              <a href="Johannes.Branke@student.uibk.ac.at">Johannes Branke</a> -
+              <a href="https://github.com/brankej">webmapping@github.com</a>
       </div>
-      <p>
-        test
-      </p>
+     
 
       <h3>chgruber</h3>
       <div class="prof_img">
           <figure>
             <img src="images/chgruber.png"/>
           </figure>
+        <p class="gray">
+              <a href="csap3389@student.uibk.ac.at">Christian Gruber</a> -
+              <a href="https://github.com/chgruber/s3.git">webmapping@github.com</a>
+        </p>
       </div>
-      <p>
-        test
-      </p>
+
 
       <h3>webmapping18ds</h3>
       <div class="prof_img">
           <figure>
             <img src="images/webmappingds18.png"/>
           </figure>
+          <p class="gray">
+              <a href="David.Segat@student.uibk.ac.at">David Segat</a> -
+              <a href="https://github.com/webmappingds18">webmapping@github.com</a>
       </div>
-      <p>
-        test
-      </p>
+     
 
       <!--<h3>Links</h3>-->
       <ul>
