--- a/about_us.html
+++ b/about_us.html
@@ -36,17 +36,15 @@
     </div>
 
     <div class="article">
-      <h1>Das Kollektiv "Gspritzt"</h1>
+      <h1>Das Kollektiv "Gspritzt"</h1> </div>
 
-      <div class="prof_img">
-          <figure>
-            <img src="images/gspritzt.png"/>
-          </figure>
+      <div class="kollektiv img">
+            <img src="images/gspritzt_groß.png"/>
       </div>
 
 
       <h3>brankej</h3>
-      <div class="prof_img">
+      <div class="prof img">
           <figure>
             <img src="images/brankej.png"/>
           </figure>
@@ -57,7 +55,7 @@
      
 
       <h3>chgruber</h3>
-      <div class="prof_img">
+      <div class="prof img">
           <figure>
             <img src="images/chgruber.png"/>
           </figure>
@@ -69,7 +67,7 @@
 
 
       <h3>webmapping18ds</h3>
-      <div class="prof_img">
+      <div class="prof img">
           <figure>
             <img src="images/webmappingds18.png"/>
           </figure>
@@ -92,7 +90,7 @@
       </ul>
 
       <div id="footer" class="gray">
-        <p>placeholder footer</p>
+          <p>Headerbild: Pitztaler Gletscher <a href="https://pixabay.com/de/berge-landschaft-natur-schnee-3187581/">(Foto von annca)</a></p>
       </div>
 
 
