--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -89,7 +89,7 @@
 
     <p>Die Anzahl der Gletscher in Tirol ist laut dem Gletscherinventar von 2006 bei 447 Gletschern und
       einer Fläche von 235 km². Beim Gletscherinventar von 1998 wurden noch 620 Gletscher gezählt und
-      eine Fläche von 325 km km² gemessen. Verglichen mit den Daten 1969 bis 1998 zeigt sich, dass Änderungsraten
+      eine Fläche von 325 km² gemessen. Verglichen mit den Daten 1969 bis 1998 zeigt sich, dass Änderungsraten
       im Allgemeinen zwischen 1998 und 2006 stark zugenommen haben.Die beiden am stärksten vergletscherten Regionen
       in Tirol sind die Ötztaler und Stubaier Alpen Zusammen machen sie etwa 51% der Tiroler Gletscherfläche aus
     (Verein Gletscher Klima).
