updated compatibility with TopoJson & added leaflet hash 2 relationmaps

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -40,23 +40,30 @@
   <script src="js/leaflet.markercluster/leaflet.markercluster.js"></script>
   <!--leaflet.markerCluster-->
 
+  <!--topojson-->
+  <script src="js/d3/d3.v3.min.js"></script>
+  <script src="js/TopoJSON/topojson.js"></script> <!-- https://github.com/topojson/topojson -->
+  <script src="js/TopoJSON/L.TopoJSON.js"></script> <!-- https://gist.github.com/brendanvinson/0e3c3c86d96863f1c33f55454705bca7-->
+  <!--topojson-->
+
+
   <!--additional leafletplugin-->
 
   <!--additional leafletplugin-->
 
   <!--Geojson Data Border-->
   <script defer src="data/suedtirol_border_line.js"></script>
-  <script defer src="data/tirol_border_line.js"></script>
+  <script defer src="data/tirol_border_line_topojson.js"></script>
   <!--Geojson Data-->
 
   <!--Geojson Data Tirol-->
-  <script defer src="data/GI3_Tirol_2006_polygon.js"></script>
+  <script defer src="data/GI3_Tirol_2006_polygon_topojson.js"></script>
   <script defer src="data/GI3_Tirol_2006_points.js"></script>
   <!--Geojson Data-->
 
   <!--Geojson Data Südtirol-->
   <script defer src="data/GlacierInventory_2006_suedtirol_points.js"></script>
-  <script defer src="data/GlacierInventory_2006_suedtirol_polygon.js"></script>
+  <script defer src="data/GlacierInventory_2006_suedtirol_polygon_topojson.js"></script>
   <!--Geojson Data-->
 
   <!--MAP-->
