--- a/relationmap.html
+++ b/relationmap.html
@@ -31,6 +31,10 @@
     <script src="js/leaflet.markercluster/leaflet.markercluster.js"></script>
     <!--leaflet.markerCluster-->
 
+    <!--leaflet.hash-->
+    <script src="js/leaflet.hash/leaflet-hash.js" ></script>
+    <!--leaflet.hash-->
+
     <!--Geojson Data Tirol-->
     <script src="data/GI3_Tirol_2006_points.js"></script>
     <!--Geojson Data-->
@@ -60,8 +64,8 @@
 
     <div id='map1'></div>
     <div id='map2'></div>
-    
-    
+
+
     <div id="footer" class="gray">
       <p><br><br> <font color="white">You found it..;)</font></p>
       <p>Headerbild: Blick vom Hinteren Eis auf den Hintereisferner (Foto von Johannes Branke)</p>
