--- a/relationmap_st.html
+++ b/relationmap_st.html
@@ -31,6 +31,10 @@
     <script src="js/leaflet.markercluster/leaflet.markercluster.js"></script>
     <!--leaflet.markerCluster-->
 
+    <!--leaflet.hash-->
+    <script src="js/leaflet.hash/leaflet-hash.js" ></script>
+    <!--leaflet.hash-->
+
     <!--Geojson Data StTirol-->
     <script src="data/GlacierInventory_2006_suedtirol_points.js"></script>
     <!--Geojson Data-->
