added topojson-simplify & implementation

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -44,6 +44,7 @@
   <script src="js/d3/d3.v3.min.js"></script>
   <script src="js/TopoJSON/topojson.js"></script> <!-- https://github.com/topojson/topojson -->
   <script src="js/TopoJSON/L.TopoJSON.js"></script> <!-- https://gist.github.com/brendanvinson/0e3c3c86d96863f1c33f55454705bca7-->
+  <script src="js/TopoJSON/topojson-simplify.js"></script>
   <!--topojson-->
 
 
